--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,6 +4,8 @@
   * Author: Themesflat
   * Author URI: http://www.themesflat.com
 */
+@import "image-gallery.css";
+
 @import "ntfs.css";
 @import "shortcodes.css";
 @import "responsive.css";
