--- a/src/assets/css/shortcodes.css
+++ b/src/assets/css/shortcodes.css
@@ -257,8 +257,8 @@
 /* button style */
 /* style-1 */
 .sc-button.style-1 {
-  border: 2px solid #fff;
-  color: #fff;
+  border: 2px solid #000;
+  color: #000;
   background: transparent none repeat scroll 0 0;
 }
 
@@ -7497,7 +7497,7 @@ button.accordion-button {
   box-shadow: 1px 1px 5px 0px rgb(0 0 0 / 50%);
 }
 .header_1.header_2.style2 {
-  background: linear-gradient(227.3deg, #8a208c 0%, #181b81 100.84%);
+  background: #fff;
 }
 
 .tf-item {
