--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -652,7 +652,24 @@ input[type="color"]::placeholder {
     line-height: 28px;
     color      : #8A8AA0;
 }
-
+.language-button {
+    margin-left: 10px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  
+  .language-button img {
+    display: block;
+    width: 24px;
+    height: auto;
+  }
+  
+  .language-button.active {
+    background-color: #f0f0f0; /* Cambia esto según tu paleta de colores */
+  }
 /* Button */
 button,
 input[type="button"],
